# mlflow-test

./: pyproject.toml
src/api/: app.py
src/api/middleware/: authentication.py
src/notebooks/: train_model.ipynb
